# MyRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test.spv  udm.md  vckg.json
apps/: CMakeLists.txt
apps/sandbox/: CMakeLists.txt  Renderer.cpp  main.cpp
core/: CMakeLists.txt
core/include/core/: Application.hpp  RenderGraph.hpp  Window.hpp
core/src/: Application.cpp  RenderGraph.cpp  Window.cpp
core/src/rhi/: CommandList.hpp  Device.hpp  GPUProfiler.hpp  RHI.cpp  RHI.hpp  RHIForward.hpp  RHIcommon.hpp  RHIconfig.hpp  Resource.hpp  Swapchain.hpp  UploadManager.hpp
core/src/utils/: ImageExporter.cpp  ImageImporter.cpp  ImageImporter.hpp  StringHash.hpp
core/src/vulkan/: VulkanBuffer.hpp  VulkanCommandList.cpp  VulkanCommandList.hpp  VulkanComputePipeline.hpp  VulkanConstantBufferManager.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanGPUProfiler.cpp  VulkanGPUProfiler.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanRenderGraph.cpp  VulkanRenderGraph.hpp  VulkanResourceAllocator.cpp  VulkanResourceAllocator.hpp  VulkanSemaphore.cpp  VulkanSemaphore.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanSync.hpp  VulkanUploadManager.cpp  VulkanUploadManager.hpp
docs/: report1.md
include/: CommandList.hpp  ComputePipeline.hpp  DescriptorManager.hpp  GPUBuffer.hpp  GPUImage.hpp  GraphicsDevice.hpp  ImageExporter.hpp  Renderer.hpp
shaders/: map_chars.comp  model.frag  model.vert  raytrace.comp  scan.comp  scan_add.comp  simple.comp  test.comp  test.frag  test.vert  test_render.comp  uniform_test.comp
src/: CommandList.cpp  ComputePipeline.cpp  GPUBuffer.cpp  GpuImage.cpp  GraphicsDevice.cpp  ImageExporter.cpp  RenderGraph.cpp  RenderGraph.hpp  Renderer.cpp  main.cpp
src/rhi/: CommandList.hpp  Device.hpp  ModelBuilder.hpp  RHI.hpp  RHIForward.hpp  RHIcommon.hpp  RHIconfig.hpp  Resource.hpp  UploadManager.hpp
src/utils/: ModelImporter.cpp  ModelImporter.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  StringHash.hpp
src/vulkan/: ShaderReflection.cpp  ShaderReflection.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCache.cpp  VulkanCache.hpp  VulkanCommandList.cpp  VulkanCommandList.hpp  VulkanComputePipeline.cpp  VulkanComputePipeline.hpp  VulkanConstantBufferManager.cpp  VulkanConstantBufferManager.hpp  VulkanDescriptorManager.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanRenderGraph.cpp  VulkanRenderGraph.hpp  VulkanResourceAllocator.cpp  VulkanResourceAllocator.hpp  VulkanSync.hpp  VulkanUploadManager.cpp  VulkanUploadManager.hpp
